tratamendo dos erros dos controllers