@@ -5,28 +5,29 @@ import br.upe.operations.SubscriptionCRUD;
 import br.upe.pojos.Session;
 import br.upe.pojos.Subscription;
 import org.junit.jupiter.api.*;
-
 import java.io.*;
 import java.util.*;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 public class SessionCRUDTest {
-
     private SessionCRUD sessionCRUD;
     private SubscriptionCRUD subscriptionCRUD;
+    static Logger logger = Logger.getLogger(SessionCRUDTest.class.getName());
 
     @BeforeAll
     public static void clearFiles() {
         try (BufferedWriter buffer = new BufferedWriter(new FileWriter(".\\state\\sessions.csv"))) {
             buffer.write(""); // Limpa o conteúdo do arquivo sessions.csv
         } catch (IOException e) {
-            e.printStackTrace();
+            logger.log(Level.SEVERE, e.getMessage(), e);
         }
         try (BufferedWriter buffer = new BufferedWriter(new FileWriter(".\\state\\subscriptions.csv"))) {
             buffer.write(""); // Limpa o conteúdo do arquivo subscriptions.csv
         } catch (IOException e) {
-            e.printStackTrace();
+            logger.log(Level.SEVERE, e.getMessage(), e);
         }
     }
 
@@ -37,7 +38,7 @@ public class SessionCRUDTest {
     }
 
     @Test
-    public void testCreateSession() {
+    void testCreateSession() {
         // Criar e salvar uma subscrição
         Subscription subscription = new Subscription();
         UUID subscriptionUuid = UUID.randomUUID();
@@ -65,11 +66,11 @@ public class SessionCRUDTest {
         List<Subscription> retrievedSubscriptions = (List<Subscription>) retrievedSession.getSubscriptions();
         assertNotNull(retrievedSubscriptions, "A lista de subscrições não deve ser nula.");
         assertEquals(1, retrievedSubscriptions.size(), "A lista de subscrições deve conter um item.");
-        assertEquals(subscription.getUuid(), retrievedSubscriptions.get(0).getUuid(), "O UUID da subscrição deve ser igual ao esperado.");
+        assertEquals(subscription.getUuid(), retrievedSubscriptions.getFirst().getUuid(), "O UUID da subscrição deve ser igual ao esperado.");
     }
 
     @Test
-    public void testDeleteSession() {
+    void testDeleteSession() {
         // Criar e salvar uma subscrição
         Subscription subscription = new Subscription();
         UUID subscriptionUuid = UUID.randomUUID();
@@ -99,7 +100,7 @@ public class SessionCRUDTest {
     }
 
     @Test
-    public void testUpdateSession() {
+    void testUpdateSession() {
         // Criar e salvar uma subscrição
         Subscription subscription = new Subscription();
         UUID subscriptionUuid = UUID.randomUUID();
@@ -137,11 +138,11 @@ public class SessionCRUDTest {
         List<Subscription> retrievedSubscriptions = (List<Subscription>) retrievedSession.getSubscriptions();
         assertNotNull(retrievedSubscriptions, "A lista de subscrições não deve ser nula.");
         assertEquals(1, retrievedSubscriptions.size(), "A lista de subscrições deve conter um item.");
-        assertEquals(subscription.getUuid(), retrievedSubscriptions.get(0).getUuid(), "O UUID da subscrição deve ser igual ao esperado.");
+        assertEquals(subscription.getUuid(), retrievedSubscriptions.getFirst().getUuid(), "O UUID da subscrição deve ser igual ao esperado.");
     }
 
     @Test
-    public void testReturnSession() {
+    void testReturnSession() {
         // Criar e salvar uma subscrição
         Subscription subscription = new Subscription();
         UUID subscriptionUuid = UUID.randomUUID();
@@ -171,6 +172,6 @@ public class SessionCRUDTest {
         List<Subscription> retrievedSubscriptions = (List<Subscription>) retrievedSession.getSubscriptions();
         assertNotNull(retrievedSubscriptions, "A lista de subscrições não deve ser nula.");
         assertEquals(1, retrievedSubscriptions.size(), "A lista de subscrições deve conter um item.");
-        assertEquals(subscription.getUuid(), retrievedSubscriptions.get(0).getUuid(), "O UUID da subscrição deve ser igual ao esperado.");
+        assertEquals(subscription.getUuid(), retrievedSubscriptions.getFirst().getUuid(), "O UUID da subscrição deve ser igual ao esperado.");
     }
 }
